--- a/style/products.css
+++ b/style/products.css
@@ -23,7 +23,7 @@ button {
     border-radius: 8px;
     cursor: pointer;
     background: rgba(224, 103, 254, 0.436);
-    color: #FF69B4;
+    color: #fdb2d8;
     font-weight: 500;
 }
 
